06June2026.txt
use ProductDB
switched to db ProductDB
db.sales.insertMany([
	{ "_id" : 1, "item" : "Americanos", "price" : 5, "size": "Short", "quantity" : 22, "date" : ISODate("2022-01-15T08:00:00Z") },
	{ "_id" : 2, "item" : "Cappuccino", "price" : 6, "size": "Short","quantity" : 12, "date" : ISODate("2022-01-16T09:00:00Z") },
	{ "_id" : 3, "item" : "Lattes", "price" : 15, "size": "Grande","quantity" : 25, "date" : ISODate("2022-01-16T09:05:00Z") },
	{ "_id" : 4, "item" : "Mochas", "price" : 25,"size": "Tall", "quantity" : 11, "date" : ISODate("2022-02-17T08:00:00Z") },
	{ "_id" : 5, "item" : "Americanos", "price" : 10, "size": "Grande","quantity" : 12, "date" : ISODate("2022-02-18T21:06:00Z") },
	{ "_id" : 6, "item" : "Cappuccino", "price" : 7, "size": "Tall","quantity" : 20, "date" : ISODate("2022-02-20T10:07:00Z") },
	{ "_id" : 7, "item" : "Lattes", "price" : 25,"size": "Tall", "quantity" : 30, "date" : ISODate("2022-02-21T10:08:00Z") },
	{ "_id" : 8, "item" : "Americanos", "price" : 10, "size": "Grande","quantity" : 21, "date" : ISODate("2022-02-22T14:09:00Z") },
	{ "_id" : 9, "item" : "Cappuccino", "price" : 10, "size": "Grande","quantity" : 17, "date" : ISODate("2022-02-23T14:09:00Z") },
	{ "_id" : 10, "item" : "Americanos", "price" : 8, "size": "Tall","quantity" : 15, "date" : ISODate("2022-02-25T14:09:00Z")}
]);
MongoBulkWriteError: E11000 duplicate key error collection: ProductDB.sales index: _id_ dup key: { _id: 1 }
db.collection.getIndexes()
MongoServerError[NamespaceNotFound]: ns does not exist: ProductDB.collection
db.sales.getIndexes()
[ { v: 2, key: { _id: 1 }, name: '_id_' } ]
db.movies.find({
   title: 'Pirates of Silicon Valley
})
SyntaxError: Unterminated string constant. (2:10)

  1 | db.movies.find({
> 2 |    title: 'Pirates of Silicon Valley
    |           ^
  3 | })
  4 |
db.movies.find({
   title: 'Pirates of Silicon Valley'
}).explain('executionStats')
{
  explainVersion: '1',
  queryPlanner: {
    namespace: 'ProductDB.movies',
    parsedQuery: {
      title: {
        '$eq': 'Pirates of Silicon Valley'
      }
    },
    indexFilterSet: false,
    optimizationTimeMillis: 1,
    maxIndexedOrSolutionsReached: false,
    maxIndexedAndSolutionsReached: false,
    maxScansToExplodeReached: false,
    prunedSimilarIndexes: false,
    winningPlan: {
      isCached: false,
      stage: 'EOF',
      type: 'nonExistentNamespace'
    },
    rejectedPlans: []
  },
  executionStats: {
    executionSuccess: true,
    nReturned: 0,
    executionTimeMillis: 20,
    totalKeysExamined: 0,
    totalDocsExamined: 0,
    executionStages: {
      isCached: false,
      stage: 'EOF',
      nReturned: 0,
      executionTimeMillisEstimate: 0,
      works: 1,
      advanced: 0,
      needTime: 0,
      needYield: 0,
      saveState: 0,
      restoreState: 0,
      isEOF: 1,
      type: 'nonExistentNamespace'
    }
  },
  queryShapeHash: '691F05727398055BEF2FBAF74C90B8DAC410A97396A013B52A5FB59C804C65C9',
  command: {
    find: 'movies',
    filter: {
      title: 'Pirates of Silicon Valley'
    },
    '$db': 'ProductDB'
  },
  serverInfo: {
    host: 'Anshul-Kanodia',
    port: 27017,
    version: '8.3.2',
    gitVersion: '89f54eb32e217d2f7bfcad50e5919f3033bb9611'
  },
  serverParameters: {
    internalQueryFacetBufferSizeBytes: 104857600,
    internalDocumentSourceGroupMaxMemoryBytes: 104857600,
    internalQueryMaxBlockingSortMemoryUsageBytes: 104857600,
    internalDocumentSourceSetWindowFieldsMaxMemoryBytes: 104857600,
    internalQueryFacetMaxOutputDocSizeBytes: 104857600,
    internalLookupStageIntermediateDocumentMaxSizeBytes: 104857600,
    internalQueryProhibitBlockingMergeOnMongoS: 0,
    internalQueryMaxAddToSetBytes: 104857600,
    internalQueryFrameworkControl: 'trySbeRestricted',
    internalQueryPlannerIgnoreIndexWithCollationForRegex: 1
  },
  ok: 1
}
db.movies.createIndex({title:1})
title_1
db.movies.getIndexes()
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { title: 1 }, name: 'title_1' }
]
db.movies.find({
   title: 'Pirates of Silicon Valley'
})
db.sales.createIndex({date:1})
date_1
db.sales.getIndexes()
[
  { v: 2, key: { id: 1 }, name: '_id' },
  { v: 2, key: { date: 1 }, name: 'date_1' }
]
ReferenceError: date_1 is not defined
db.sales.getIndexes()
[ { v: 2, key: { id: 1 }, name: '_id' } ]

db.sales.createIndex({item: 1})
item_1

db.sales.getIndexes()
[
  { v: 2, key: { id: 1 }, name: '_id' },
  { v: 2, key: { item: 1 }, name: 'item_1' }
]
ReferenceError: item_1 is not defined
db.collection.createIndex({ field: 1}, {unique: true});
field_1
db.users.insertMany([
   { email:  "john@test.com", name: "john"},
   { email:  "jane@test.com", name: "jane"},
]);
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a241e57765a23d0fad47dc0'),
    '1': ObjectId('6a241e57765a23d0fad47dc1')
  }
}
db.users.createIndex({email:1},{unique:true});
email_1
db.users.insertOne(
   { email:  "john@test.com", name: "johny"}
);
MongoServerError: E11000 duplicate key error collection: ProductDB.users index: email_1 dup key: { email: "john@test.com" }
db.users.drop()
true
db.users.insertMany([
   { email:  "john@test.com", name: "john"},
   { email:  "john@test.com", name: "johny"},
   { email:  "jane@test.com", name: "jane"},
])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a241e74765a23d0fad47dc3'),
    '1': ObjectId('6a241e74765a23d0fad47dc4'),
    '2': ObjectId('6a241e74765a23d0fad47dc5')
  }
}
db.users.createIndex({email: 1},{unique:true})
MongoServerError[DuplicateKey]: Index build failed: 256ab6d1-e56c-4250-8e0f-7d397d4d2771: Collection ProductDB.users ( af2d1d93-46d2-4c10-9c7a-d9b3d7f7195e ) :: caused by :: E11000 duplicate key error collection: ProductDB.users index: email_1 dup key: { email: "john@test.com" }
db.users.deleteOne({name:'johny', email: 'john@test.com'});
{
  acknowledged: true,
  deletedCount: 1
}
db.users.createIndex({email: 1},{unique:true})
email_1
db.collection.createIndex({field1: 1, field2: 1}, {unique: true});
field1_1_field2_1
db.locations.insertOne({
	address: "Downtown San Jose, CA, USA",
	lat: 37.335480,
	long: -121.893028
})
{
  acknowledged: true,
  insertedId: ObjectId('6a241e93765a23d0fad47dc6')
}
db.locations.createIndex({
	lat: 1,
	long: 1
},{ unique: true });
lat_1_long_1
db.locations.insertOne({
	address: "Dev Bootcamp, San Jose, CA, USA",
	lat: 37.335480,
	long: -122.893028
})
{
  acknowledged: true,
  insertedId: ObjectId('6a241e9f765a23d0fad47dc7')
}
db.locations.insertOne({
	address: "Central San Jose, CA, USA",
	lat: 37.335480,
	long: -121.893028
})
MongoServerError: E11000 duplicate key error collection: ProductDB.locations index: lat_1_long_1 dup key: { lat: 37.33548, long: -121.893028 }
db.collection.createIndex({
    field1: type,
    field2: type,
    field3: type,
    ...
});
SyntaxError: Unexpected token (6:0)

  4 |     field3: type,
  5 |     ...
> 6 | });
    | ^
  7 |
db.movies.createIndex({ title: 1, year: 1 })
title_1_year_1
db.movies.find({title: /valley/gi, year: 2014}).explain('executionStats');
BSONError: The regular expression option [g] is not supported
db.movies.find({title:/valley/gi}).explain('executionStats');
BSONError: The regular expression option [g] is not supported
ProductDB

use ProductDB
switched to db ProductDB
db.collection.dropIndex(index)
ReferenceError: index is not defined
db.collection.dropIndexes()
{
  nIndexesWas: 3,
  msg: 'non-_id indexes dropped for collection',
  ok: 1
}
db.movies.createIndex({year: 1})
year_1
db.movies.getIndexes()
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { title: 1 }, name: 'title_1' },
  { v: 2, key: { title: 1, year: 1 }, name: 'title_1_year_1' },
  { v: 2, key: { year: 1 }, name: 'year_1' }
]
db.movies.dropIndex('year_1')
{ nIndexesWas: 4, ok: 1 }
db.movies.getIndexes()

[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { title: 1 }, name: 'title_1' },
  { v: 2, key: { title: 1, year: 1 }, name: 'title_1_year_1' }
]
db.movies.createIndex({runtime: -1})
runtime_-1
db.movies.getIndexes()
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { title: 1 }, name: 'title_1' },
  { v: 2, key: { title: 1, year: 1 }, name: 'title_1_year_1' },
  { v: 2, key: { runtime: -1 }, name: 'runtime_-1' }
]
db.movies.dropIndex({runtime: -1});
{ nIndexesWas: 4, ok: 1 }
db.movies.createIndex({year: 1})
db.movies.createIndex({runtime: 1})
runtime_1
db.movies.getIndexes()
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { title: 1 }, name: 'title_1' },
  { v: 2, key: { title: 1, year: 1 }, name: 'title_1_year_1' },
  { v: 2, key: { year: 1 }, name: 'year_1' },
  { v: 2, key: { runtime: 1 }, name: 'runtime_1' }
]
db.movies.dropIndexes()
{
  nIndexesWas: 5,
  msg: 'non-_id indexes dropped for collection',
  ok: 1
}
ProductDB


Use (Shift+) Enter to navigate results.

db.collection.dropIndexes()


